<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="recipe"
            type="com.example.whatscooking.main.recipepage.RecipeViewModel" />
        <import type="android.view.View"/>
        <import type="android.net.Uri"/>
        <import type="com.example.whatscooking.utilities.Constants"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main.recipeslist.RecipeFragment"
        android:background="@color/white">

        <com.example.whatscooking.main.recipepage.ScrollViewWithConditionalTouchIntercept
            android:id="@+id/recipe_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/image_layout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:adjustViewBounds="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent="30"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/recipe_image"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:background="@color/transparent"
                        android:contentDescription="Recipe image"
                        android:scaleType="centerCrop"
                        android:src="@{recipe.recipeDetailsLiveData.imageUri == null ? null : Uri.parse(recipe.recipeDetailsLiveData.imageUri)}"
                        android:transitionName="@{Constants.RECIPE_IMG_TRANSITION_ID}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/title"
                        style="@style/MainTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/black_transparent"
                        android:fontFamily="sans-serif-light"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@{recipe.recipeDetailsLiveData.title}"
                        android:textColor="@color/white"
                        android:textSize="32sp"
                        android:transitionName="@{Constants.RECIPE_TITLE_TRANSITION_ID}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/recipe_info_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    app:layout_constraintHeight_percent="10"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/image_layout">

                    <TextView
                        android:id="@+id/time_title"
                        style="@style/MainTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:text="@string/time"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/time_value"
                        style="@style/SecondaryTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:text="@{recipe.recipeDetailsLiveData.timeMinutes + ` ` + @string/min}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/time_title" />

                    <TextView
                        android:id="@+id/difficulty_title"
                        style="@style/MainTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:text="@string/difficulty"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/time_value" />

                    <TextView
                        android:id="@+id/difficulty_value"
                        style="@style/SecondaryTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:text="@{String.valueOf(recipe.recipeDetailsLiveData.difficulty)}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/difficulty_title" />

                    <TextView
                        android:id="@+id/servings_title"
                        style="@style/MainTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:text="@string/servings"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/difficulty_value" />

                    <TextView
                        android:id="@+id/recipe_servings"
                        style="@style/SecondaryTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:text="@{String.valueOf(recipe.recipeDetailsLiveData.servings)}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/servings_title" />
                    <!-- TODO add tags-->

                </androidx.constraintlayout.widget.ConstraintLayout>

                <FrameLayout
                    android:id="@+id/child_frame_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent="60"
                    app:layout_constraintHorizontal_bias="0.6"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recipe_info_layout" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.example.whatscooking.main.recipepage.ScrollViewWithConditionalTouchIntercept>

        <View style="@style/Divider"
            android:id="@+id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/change_view_button"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/change_view_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:onClick="onChangeViewButtonPressed"
            android:text="@string/view_recipe"
            style="@style/MainButtonStyle"
            app:elevation="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>